--- a/style/footer.css
+++ b/style/footer.css
@@ -12,14 +12,14 @@
     width: 1200px;
     height: 225px;
     margin: auto;
-    border: 1px solid palevioletred;
+    border: 1px solid transparent;
 }
 
 .header-div {
     width: 100%;
     height: 33.33%;
     border: 1px solid transparent;
-    border: 1px solid white;
+    border: 1px solid transparent;
 }
 
 .header-btn {
@@ -37,7 +37,7 @@
     display: flex;
     justify-content: left;
     align-items: center;
-    border: 1px solid red;
+    border: 1px solid transparent;
 }
 
 #header-store-div {
@@ -119,7 +119,6 @@
 #main-logo {
     width: 250px;
     height: 40px;
-    border: 1px solid red;
 }
 
 /* Media Quesries */
