--- a/style/footer.css
+++ b/style/footer.css
@@ -6,26 +6,28 @@
     background-color: #111111;
     display: flex;
     align-items: center;
+    border: none;
 }
 
 #header-sub {
     width: 1200px;
     height: 225px;
     margin: auto;
-    border: 1px solid transparent;
+    border: none;
 }
 
-.header-div {
+/* .header-div {
     width: 100%;
     height: 33.33%;
-    border: 1px solid transparent;
-}
+    border: none;
+} */
 
 .header-btn {
     font-family: sans-serif;
     font-size: 16px;
     color: #AAAAAA;
     margin-left: 25px;
+    border: none;
 }
 
 .header-btn:hover {
@@ -33,10 +35,12 @@
 }
 
 #header-btn-div {
+    width: 100%;
+    height: 33.33%;
     display: flex;
-    justify-content: left;
     align-items: center;
-    border: 1px solid transparent;
+    justify-content: left;
+    border: 1px solid none;
 }
 
 #header-store-div {
@@ -52,6 +56,7 @@
 #header-social-div {
     height: 40px;
     display: flex;
+    border: none;
 }
 
 #header-social-sub-div-1 {
@@ -76,6 +81,7 @@
     font-family: sans-serif;
     color: #AAAAAA;
     margin-left: 315px;
+    font-size: 14px;
 }
 
 #footer-email-address {
@@ -115,10 +121,9 @@
     filter: brightness(125%);
 }
 
-#main-logo {
+#main-footer-logo {
     width: 250px;
     height: 40px;
-    border: 1px solid transparent;
 }
 
 /* Media Quesries */
@@ -138,11 +143,11 @@
         border: 1px solid transparent;
     }
 
-    .header-div {
+    /* .header-div {
         width: 100%;
         height: 33.33%;
         border: 1px solid transparent;
-    }
+    } */
 
     .header-btn {
         font-family: sans-serif;
@@ -156,6 +161,8 @@
     }
 
     #header-btn-div {
+        width: 100%;
+    height: 33.33%;
         display: flex;
         justify-content: left;
         align-items: center;
@@ -198,6 +205,7 @@
         font-family: sans-serif;
         color: #AAAAAA;
         margin-left: 157.5px;
+        font-size: 10px;
     }
 
     #footer-email-address {
@@ -247,7 +255,7 @@
         height: 33px;
     }
 
-    #main-logo {
+    #main-footer-logo {
         width: 125px;
         height: 20px;
     }
@@ -270,11 +278,11 @@
         border: 1px solid transparent;
     }
 
-    .header-div {
+    /* .header-div {
         width: 100%;
         height: 33.33%;
         border: 1px solid transparent;
-    }
+    } */
 
     .header-btn {
         font-family: sans-serif;
@@ -288,6 +296,8 @@
     }
 
     #header-btn-div {
+        width: 100%;
+    height: 33.33%;
         display: flex;
         justify-content: left;
         align-items: center;
@@ -330,6 +340,7 @@
         font-family: sans-serif;
         color: #AAAAAA;
         margin-left: 129px;
+        font-size: 8px;
     }
 
     #footer-email-address {
@@ -379,7 +390,7 @@
         height: 17px;
     }
 
-    #main-logo {
+    #main-footer-logo {
         width: 63px;
         height: 10px;
     }
