--- a/style/index.css
+++ b/style/index.css
@@ -7,11 +7,23 @@
     align-items: center;
     justify-content: center;
     overflow: hidden;
+    border: none;
 }
 
 #text-content {
     text-align: center;
     z-index: 1;
+}
+
+#orange{
+    z-index: 1;
+}
+
+#gray{
+    z-index: 1;
+    position: absolute;
+    bottom: 0;
+    left: 0;
 }
 
 #bg-video-div {
@@ -20,6 +32,13 @@
     left: 0;
     width: 100%;
     height: 100%;
+}
+
+#bg-video{
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
 }
 
 video {
